additional refactoring and clean up