@@ -1,6 +1,5 @@
 package dk.kvalitetsit.hjemmebehandling.controller;
 
-import dk.kvalitetsit.hjemmebehandling.api.CallToActionDTO;
 import dk.kvalitetsit.hjemmebehandling.api.DtoMapper;
 import dk.kvalitetsit.hjemmebehandling.constants.errors.ErrorDetails;
 import dk.kvalitetsit.hjemmebehandling.context.UserContextProvider;
@@ -23,6 +22,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.openapitools.model.CallToActionDTO;
 import org.openapitools.model.QuestionnaireResponseDto;
 import org.openapitools.model.UserContext;
 import org.springframework.http.HttpStatus;
@@ -31,6 +31,7 @@ import org.springframework.http.ResponseEntity;
 import java.net.URI;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -54,24 +55,19 @@ public class QuestionnaireResponseControllerTest {
 
     @Test
     public void getQuestionnaireResponses_cprParameterMissing_400() {
-        // Arrange
         String carePlanId = null;
         int pageNumber = 1;
         int pageSize = 10;
 
-        // Act
-
-        // Assert
         assertThrows(BadRequestException.class, () -> subject.getQuestionnaireResponsesByCarePlanId(carePlanId, new ArrayList<>(), pageNumber, pageSize));
     }
 
     @Test
     public void getQuestionnaireResponses_responsesPresent_200() throws Exception {
-        // Arrange
         String carePlanId = "careplan-1";
         String questionnaireId = "questionnaire-1";
-        Integer pageNumber = 1;
-        Integer pageSize = 10;
+        int pageNumber = 1;
+        int pageSize = 10;
 
         QuestionnaireResponseModel responseModel1 = new QuestionnaireResponseModel();
         QuestionnaireResponseModel responseModel2 = new QuestionnaireResponseModel();
@@ -83,12 +79,10 @@ public class QuestionnaireResponseControllerTest {
         Mockito.when(dtoMapper.mapQuestionnaireResponseModel(responseModel1)).thenReturn(responseDto1);
         Mockito.when(dtoMapper.mapQuestionnaireResponseModel(responseModel2)).thenReturn(responseDto2);
 
-        // Act
         ResponseEntity<List<QuestionnaireResponseDto>> result = subject.getQuestionnaireResponsesByCarePlanId(carePlanId, List.of(questionnaireId), pageNumber, pageSize);
 
-        // Assert
         assertEquals(HttpStatus.OK, result.getStatusCode());
-        assertEquals(2, result.getBody().size());
+        assertEquals(2, Objects.requireNonNull(result.getBody()).size());
         assertTrue(result.getBody().contains(responseDto1));
         assertTrue(result.getBody().contains(responseDto2));
     }
@@ -96,17 +90,15 @@ public class QuestionnaireResponseControllerTest {
 
     @Test
     public void getQuestionnaireResponsesForMultipleCarePlans_responsesPresent_200() throws Exception {
-
-        // Arrange
         List<String> carePlanIds = List.of("careplan-1", "careplan-2");
         List<String> questionnaireId = List.of("questionnaire-1", "questionnaire-2");
-        Integer pageNumber = 1;
-        Integer pageSize = 10;
+        int pageNumber = 1;
+        int pageSize = 10;
 
         QuestionnaireResponseModel responseModel1 = new QuestionnaireResponseModel();
         QuestionnaireResponseModel responseModel2 = new QuestionnaireResponseModel();
 
-        responseModel1.setCarePlanId(new QualifiedId("CarePlan/" + carePlanIds.get(0)));
+        responseModel1.setCarePlanId(new QualifiedId("CarePlan/" + carePlanIds.getFirst()));
         responseModel2.setCarePlanId(new QualifiedId("CarePlan/" + carePlanIds.get(1)));
 
         QuestionnaireResponseDto responseDto1 = new QuestionnaireResponseDto();
@@ -118,79 +110,54 @@ public class QuestionnaireResponseControllerTest {
         Mockito.when(dtoMapper.mapQuestionnaireResponseModel(responseModel1)).thenReturn(responseDto1);
         Mockito.when(dtoMapper.mapQuestionnaireResponseModel(responseModel2)).thenReturn(responseDto2);
 
-        // Act
         ResponseEntity<List<QuestionnaireResponseDto>> result = subject.getQuestionnaireResponsesForMultipleCarePlans(carePlanIds, questionnaireId, pageNumber, pageSize);
-
-        // Assert
         assertEquals(HttpStatus.OK, result.getStatusCode());
-        assertEquals(2, result.getBody().size());
+        assertEquals(2, Objects.requireNonNull(result.getBody()).size());
         assertTrue(result.getBody().contains(responseDto1));
         assertTrue(result.getBody().contains(responseDto2));
     }
 
     @Test
     public void getQuestionnaireResponsesForMultipleCarePlans_accessViolation_403() throws Exception {
-        // Arrange
         List<String> carePlanIds = List.of("careplan-1", "careplan-2");
         List<String> questionnaireId = List.of("questionnaire-1", "questionnaire-2");
-
         int pageNumber = 1;
         int pageSize = 10;
         PageDetails pageDetails = new PageDetails(pageNumber, pageSize);
         Mockito.when(questionnaireResponseService.getQuestionnaireResponsesForMultipleCarePlans(carePlanIds, questionnaireId, pageDetails)).thenThrow(AccessValidationException.class);
-
-        // Act + Assert
         assertThrows(ForbiddenException.class, () -> subject.getQuestionnaireResponsesForMultipleCarePlans(carePlanIds, questionnaireId, pageNumber, pageSize));
     }
 
     @Test
     public void getQuestionnaireResponses_accessViolation_403() throws Exception {
-        // Arrange
         String carePlanId = "careplan-1";
         String questionnaireId = "questionnaire-1";
-
         int pageNumber = 1;
         int pageSize = 10;
         PageDetails pageDetails = new PageDetails(pageNumber, pageSize);
         Mockito.when(questionnaireResponseService.getQuestionnaireResponses(carePlanId, List.of(questionnaireId), pageDetails)).thenThrow(AccessValidationException.class);
-
-        // Act
-
-        // Assert
         assertThrows(ForbiddenException.class, () -> subject.getQuestionnaireResponsesByCarePlanId(carePlanId, List.of(questionnaireId), pageNumber, pageSize));
     }
 
     @Test
     public void getQuestionnaireResponses_failureToFetch_500() throws Exception {
-        // Arrange
         String carePlanId = "careplan-1";
         String questionnaireId = "questionnaire-1";
         int pageNumber = 1;
         int pageSize = 10;
-
         PageDetails pageDetails = new PageDetails(pageNumber, pageSize);
         Mockito.when(questionnaireResponseService.getQuestionnaireResponses(carePlanId, List.of(questionnaireId), pageDetails)).thenThrow(new ServiceException("error", ErrorKind.INTERNAL_SERVER_ERROR, ErrorDetails.INTERNAL_SERVER_ERROR));
-
-        // Act
-
-        // Assert
         assertThrows(InternalServerErrorException.class, () -> subject.getQuestionnaireResponsesByCarePlanId(carePlanId, List.of(questionnaireId), pageNumber, pageSize));
     }
 
     @Test
     public void getQuestionnaireResponseById_responsePresent_200() throws Exception {
-        // Arrange
         String questionnaireResponseId = "questionnaireresponse-1";
-
         QuestionnaireResponseModel questionnaireResponseModel = new QuestionnaireResponseModel();
         QuestionnaireResponseDto questionnaireResponseDto = new QuestionnaireResponseDto();
         Mockito.when(questionnaireResponseService.getQuestionnaireResponseById(new QualifiedId(questionnaireResponseId, ResourceType.QuestionnaireResponse))).thenReturn(Optional.of(questionnaireResponseModel));
         Mockito.when(dtoMapper.mapQuestionnaireResponseModel(questionnaireResponseModel)).thenReturn(questionnaireResponseDto);
-
-        // Act
         ResponseEntity<QuestionnaireResponseDto> result = subject.getQuestionnaireResponseById(questionnaireResponseId);
-
-        // Assert
         assertEquals(HttpStatus.OK, result.getStatusCode());
         assertEquals(questionnaireResponseDto, result.getBody());
     }
@@ -198,129 +165,77 @@ public class QuestionnaireResponseControllerTest {
 
     @Test
     public void getQuestionnaireResponseById_responseMissing_404() throws Exception {
-        // Arrange
         String questionnaireResponseId = "questionnaireresponse-1";
-
         Mockito.when(questionnaireResponseService.getQuestionnaireResponseById(new QualifiedId(questionnaireResponseId, ResourceType.QuestionnaireResponse))).thenReturn(Optional.empty());
-
-        // Act
-
-        // Assert
         assertThrows(ResourceNotFoundException.class, () -> subject.getQuestionnaireResponseById(questionnaireResponseId));
     }
 
 
     @Test
     public void getQuestionnaireResponseById_accessViolation_403() throws Exception {
-        // Arrange
         String questionnaireResponseId = "questionnaireresponse-1";
-
         Mockito.doThrow(AccessValidationException.class).when(questionnaireResponseService).getQuestionnaireResponseById(new QualifiedId(questionnaireResponseId, ResourceType.QuestionnaireResponse));
-
-        // Act
-
-        // Assert
         assertThrows(ForbiddenException.class, () -> subject.getQuestionnaireResponseById(questionnaireResponseId));
     }
 
     @Test
     public void getQuestionnaireResponseById_failure_500() throws Exception {
-        // Arrange
         String questionnaireResponseId = "questionnaireresponse-1";
-
-        Mockito.doThrow(new ServiceException("error", ErrorKind.INTERNAL_SERVER_ERROR, ErrorDetails.INTERNAL_SERVER_ERROR))
-                .when(questionnaireResponseService).getQuestionnaireResponseById(new QualifiedId(questionnaireResponseId, ResourceType.QuestionnaireResponse));
-
-        // Act
-
-        // Assert
+        Mockito.doThrow(new ServiceException("error", ErrorKind.INTERNAL_SERVER_ERROR, ErrorDetails.INTERNAL_SERVER_ERROR)).when(questionnaireResponseService).getQuestionnaireResponseById(new QualifiedId(questionnaireResponseId, ResourceType.QuestionnaireResponse));
         assertThrows(InternalServerErrorException.class, () -> subject.getQuestionnaireResponseById(questionnaireResponseId));
     }
 
     @Test
     public void submitQuestionnaireResponse_success_201() throws Exception {
-        // Arrange
         QuestionnaireResponseDto questionnaireResponseDto = new QuestionnaireResponseDto();
-
         String cpr = "0101010101";
         QuestionnaireResponseModel questionnaireResponseModel = new QuestionnaireResponseModel();
         Mockito.when(dtoMapper.mapQuestionnaireResponseDto(questionnaireResponseDto)).thenReturn(questionnaireResponseModel);
         Mockito.when(questionnaireResponseService.submitQuestionnaireResponse(questionnaireResponseModel, cpr)).thenReturn("questionnaireresponse-1");
-
         String location = "http://localhost:8080/api/v1/questionnaireresponse/questionnaireresponse-1";
         Mockito.when(locationHeaderBuilder.buildLocationHeader("questionnaireresponse-1")).thenReturn(URI.create(location));
-
         setupUserContext(cpr);
-
-        // Act
         ResponseEntity<CallToActionDTO> result = subject.submitQuestionnaireResponse(questionnaireResponseDto);
-
-        // Assert
         assertEquals(HttpStatus.CREATED, result.getStatusCode());
         assertNotNull(result.getHeaders().get("Location"));
-        assertEquals(location, result.getHeaders().get("Location").get(0));
+        assertEquals(location, result.getHeaders().get("Location").getFirst());
     }
 
     @Test
     public void submitQuestionnaireResponse_accessViolation_403() throws Exception {
-        // Arrange
         QuestionnaireResponseDto questionnaireResponseDto = new QuestionnaireResponseDto();
-
         String cpr = "0101010101";
         QuestionnaireResponseModel questionnaireResponseModel = new QuestionnaireResponseModel();
         Mockito.when(dtoMapper.mapQuestionnaireResponseDto(questionnaireResponseDto)).thenReturn(questionnaireResponseModel);
-
         Mockito.when(questionnaireResponseService.submitQuestionnaireResponse(questionnaireResponseModel, cpr)).thenThrow(AccessValidationException.class);
-
         setupUserContext(cpr);
-
-        // Act
-
-        // Assert
         assertThrows(ForbiddenException.class, () -> subject.submitQuestionnaireResponse(questionnaireResponseDto));
     }
 
     @Test
     public void submitQuestionnaireResponse_badRequest_400() throws Exception {
-        // Arrange
         QuestionnaireResponseDto questionnaireResponseDto = new QuestionnaireResponseDto();
-
         String cpr = "0101010101";
         QuestionnaireResponseModel questionnaireResponseModel = new QuestionnaireResponseModel();
         Mockito.when(dtoMapper.mapQuestionnaireResponseDto(questionnaireResponseDto)).thenReturn(questionnaireResponseModel);
-
         Mockito.when(questionnaireResponseService.submitQuestionnaireResponse(questionnaireResponseModel, cpr)).thenThrow(new ServiceException("error", ErrorKind.BAD_REQUEST, ErrorDetails.INCOMPLETE_RESPONSE));
-
         setupUserContext(cpr);
-
-        // Act
-
-        // Assert
         assertThrows(BadRequestException.class, () -> subject.submitQuestionnaireResponse(questionnaireResponseDto));
     }
 
     @Test
     public void submitQuestionnaireResponse_failure_500() throws Exception {
-        // Arrange
         QuestionnaireResponseDto questionnaireResponseDto = new QuestionnaireResponseDto();
-
         String cpr = "0101010101";
         QuestionnaireResponseModel questionnaireResponseModel = new QuestionnaireResponseModel();
         Mockito.when(dtoMapper.mapQuestionnaireResponseDto(questionnaireResponseDto)).thenReturn(questionnaireResponseModel);
-
         Mockito.when(questionnaireResponseService.submitQuestionnaireResponse(questionnaireResponseModel, cpr)).thenThrow(new ServiceException("error", ErrorKind.INTERNAL_SERVER_ERROR, ErrorDetails.INTERNAL_SERVER_ERROR));
-
         setupUserContext(cpr);
-
-        // Act
-
-        // Assert
         assertThrows(InternalServerErrorException.class, () -> subject.submitQuestionnaireResponse(questionnaireResponseDto));
     }
 
     private void setupUserContext(String cpr) {
-        var userContext = new UserContext()
-                .cpr(cpr);
+        var userContext = new UserContext().cpr(cpr);
         Mockito.when(userContextProvider.getUserContext()).thenReturn(userContext);
     }
 }
