@@ -3,7 +3,9 @@ package dk.kvalitetsit.hjemmebehandling.service;
 import dk.kvalitetsit.hjemmebehandling.constants.ExaminationStatus;
 import dk.kvalitetsit.hjemmebehandling.constants.Systems;
 import dk.kvalitetsit.hjemmebehandling.constants.TriagingCategory;
-import dk.kvalitetsit.hjemmebehandling.fhir.*;
+import dk.kvalitetsit.hjemmebehandling.fhir.FhirClient;
+import dk.kvalitetsit.hjemmebehandling.fhir.FhirLookupResult;
+import dk.kvalitetsit.hjemmebehandling.fhir.FhirMapper;
 import dk.kvalitetsit.hjemmebehandling.model.*;
 import dk.kvalitetsit.hjemmebehandling.service.access.AccessValidator;
 import dk.kvalitetsit.hjemmebehandling.service.exception.AccessValidationException;
@@ -31,24 +33,6 @@ import static org.junit.jupiter.api.Assertions.*;
 
 @ExtendWith(MockitoExtension.class)
 public class QuestionnaireResponseServiceTest {
-    @InjectMocks
-    private QuestionnaireResponseService subject;
-
-    @Mock
-    private FhirClient fhirClient;
-
-    @Mock
-    private FhirMapper fhirMapper;
-
-    @Mock
-    private DateProvider dateProvider;
-
-    @Mock
-    private TriageEvaluator triageEvaluator;
-
-    @Mock
-    private AccessValidator accessValidator;
-
     private static final String CAREPLAN_ID_1 = "CarePlan/careplan-1";
     private static final String CAREPLAN_ID_2 = "CarePlan/careplan-2";
     private static final String ORGANIZATION_ID_1 = "Organization/organization-1";
@@ -56,57 +40,57 @@ public class QuestionnaireResponseServiceTest {
     private static final String QUESTIONNAIRE_ID_1 = "Questionnaire/questionnaire-1";
     private static final String QUESTIONNAIRE_ID_2 = "Questionnaire/questionnaire-2";
     private static final String QUESTIONNAIRE_RESPONSE_ID_1 = "QuestionnaireResponse/questionnaireresponse-1";
-
     private static final Instant POINT_IN_TIME = Instant.parse("2021-11-26T10:00:00.000Z");
+    @InjectMocks
+    private QuestionnaireResponseService subject;
+    @Mock
+    private FhirClient fhirClient;
+    @Mock
+    private FhirMapper fhirMapper;
+    @Mock
+    private DateProvider dateProvider;
+    @Mock
+    private TriageEvaluator triageEvaluator;
+    @Mock
+    private AccessValidator accessValidator;
 
     @Test
     public void getQuestionnaireResponses_responsesPresent_returnsResponses() throws Exception {
-        // Arrange
         String carePlanId = CAREPLAN_ID_1;
 
-        QuestionnaireResponse response = buildQuestionnaireResponse(QUESTIONNAIRE_RESPONSE_ID_1, QUESTIONNAIRE_ID_1, PATIENT_ID);
-        Patient patient = buildPatient(PATIENT_ID);
+        QuestionnaireResponse response = buildQuestionnaireResponse();
+        Patient patient = buildPatient();
         FhirLookupResult lookupResult = FhirLookupResult.fromResources(response, patient);
         Mockito.when(fhirClient.lookupQuestionnaireResponses(carePlanId, new ArrayList<>())).thenReturn(lookupResult);
         Mockito.when(fhirClient.lookupVersionsOfQuestionnaireById(List.of())).thenReturn(List.of());
-
-
         QuestionnaireResponseModel responseModel = new QuestionnaireResponseModel();
         Mockito.when(fhirMapper.mapQuestionnaireResponse(response, lookupResult, List.of())).thenReturn(responseModel);
 
-        // Act
         int pageNumber = 1;
         int pageSize = 10;
         PageDetails pageDetails = new PageDetails(pageNumber, pageSize);
         List<QuestionnaireResponseModel> result = subject.getQuestionnaireResponses(carePlanId, new ArrayList<>(), pageDetails);
 
-        // Assert
         assertEquals(1, result.size());
         assertTrue(result.contains(responseModel));
     }
 
     @Test
     public void getQuestionnaireResponses_responsesMissing_returnsEmptyList() throws Exception {
-        // Arrange
         String carePlanId = CAREPLAN_ID_1;
-
         Mockito.when(fhirClient.lookupQuestionnaireResponses(carePlanId, new ArrayList<>())).thenReturn(FhirLookupResult.fromResources());
 
-        // Act
         int pageNumber = 1;
         int pageSize = 10;
         PageDetails pageDetails = new PageDetails(pageNumber, pageSize);
         List<QuestionnaireResponseModel> result = subject.getQuestionnaireResponses(carePlanId, new ArrayList<>(), pageDetails);
 
-        // Assert
         assertEquals(0, result.size());
     }
 
     @Test
     public void getQuestionnaireResponses_ReturnOneItem_WhenPagesizeIsOne() throws Exception {
-        //Arrange
         QuestionnaireResponseService qrservice = new QuestionnaireResponseService(fhirClient, fhirMapper, null, triageEvaluator, accessValidator);
-
 
         QuestionnaireResponse response = new QuestionnaireResponse();
         Patient patient = new Patient();
@@ -116,10 +100,8 @@ public class QuestionnaireResponseServiceTest {
 
         Mockito.when(fhirClient.lookupQuestionnaireResponses(null, new ArrayList<>())).thenReturn(lookupResult);
 
-
         PageDetails pageDetails = new PageDetails(1, 1);
         List<QuestionnaireResponseModel> result = qrservice.getQuestionnaireResponses(null, new ArrayList<>(), pageDetails);
-
 
         assertEquals(1, result.size());
     }
@@ -129,10 +111,7 @@ public class QuestionnaireResponseServiceTest {
      */
     @Test
     public void getQuestionnaireResponsesForMultipleCarePlans_ReturnSortedPages() throws Exception {
-
-        //Arrange
         QuestionnaireResponseService subject = new QuestionnaireResponseService(fhirClient, fhirMapper, null, triageEvaluator, accessValidator);
-
 
         List<QuestionnaireResponse> responses = new LinkedList<>();
 
@@ -156,26 +135,24 @@ public class QuestionnaireResponseServiceTest {
 
         Mockito.when(fhirClient.lookupQuestionnaireResponsesForMultipleCarePlans(carePlanIds, questionnaireIds)).thenReturn(result);
 
-        for (int i = 0; i < responses.size(); i++) {
-            Mockito.when(fhirMapper.mapQuestionnaireResponse(responses.get(i), result, List.of())).thenReturn(questionnaireResponseToQuestionnaireResponseModel(responses.get(i)));
+        for (QuestionnaireResponse respons : responses) {
+            Mockito.when(fhirMapper.mapQuestionnaireResponse(respons, result, List.of())).thenReturn(questionnaireResponseToQuestionnaireResponseModel(respons));
         }
 
         List<List<QuestionnaireResponseModel>> results = new LinkedList<>();
 
         final int pageSize = 2;
 
-        // ACTION
-        for (int i = 0; i < (months/pageSize); i++) {
-            PageDetails pageDetails1 = new PageDetails(i+1, pageSize);
+        for (int i = 0; i < (months / pageSize); i++) {
+            PageDetails pageDetails1 = new PageDetails(i + 1, pageSize);
             results.add(subject.getQuestionnaireResponsesForMultipleCarePlans(carePlanIds, questionnaireIds, pageDetails1));
         }
 
-        //ASSERT
         for (int i = 0; i < results.size(); i++) {
             List<QuestionnaireResponseModel> r = results.get(i);
             assertEquals(pageSize, r.size());
             for (int j = 0; j < pageSize; j++) {
-                var id = (responses.size() - 1 - (j + i*2));
+                var id = (responses.size() - 1 - (j + i * 2));
                 assertEquals(Integer.toString(id), r.get(j).getId().getId());
             }
 
@@ -185,7 +162,6 @@ public class QuestionnaireResponseServiceTest {
 
     @Test
     public void getQuestionnaireResponses_ReturnSortedPages_WhenTwoPages() throws Exception {
-        //Arrange
         QuestionnaireResponseService qrservice = new QuestionnaireResponseService(fhirClient, fhirMapper, null, triageEvaluator, accessValidator);
 
         QuestionnaireResponse response1 = new QuestionnaireResponse();
@@ -216,20 +192,18 @@ public class QuestionnaireResponseServiceTest {
         Mockito.when(fhirMapper.mapQuestionnaireResponse(response3, lookupResult1, List.of())).thenReturn(questionnaireResponseToQuestionnaireResponseModel(response3));
         Mockito.when(fhirMapper.mapQuestionnaireResponse(response4, lookupResult1, List.of())).thenReturn(questionnaireResponseToQuestionnaireResponseModel(response4));
 
-        //ACTION
         PageDetails pageDetails1 = new PageDetails(1, 2);
         List<QuestionnaireResponseModel> result1 = qrservice.getQuestionnaireResponses(null, new ArrayList<>(), pageDetails1);
 
         PageDetails pageDetails2 = new PageDetails(2, 2);
         List<QuestionnaireResponseModel> result2 = qrservice.getQuestionnaireResponses(null, new ArrayList<>(), pageDetails2);
 
-        //ASSERT
         assertEquals(2, result1.size());
         assertEquals(2, result2.size());
 
-        assertEquals("4", result1.get(0).getId().getId());
+        assertEquals("4", result1.getFirst().getId().getId());
         assertEquals("3", result1.get(1).getId().getId());
-        assertEquals("2", result2.get(0).getId().getId());
+        assertEquals("2", result2.getFirst().getId().getId());
         assertEquals("1", result2.get(1).getId().getId());
     }
 
@@ -241,9 +215,7 @@ public class QuestionnaireResponseServiceTest {
 
     @Test
     public void getQuestionnaireResponses_ReturnZeroItem_WhenPagesizeIsZero() throws Exception {
-        //Arrange
         QuestionnaireResponseService qrservice = new QuestionnaireResponseService(fhirClient, fhirMapper, null, triageEvaluator, accessValidator);
-
 
         QuestionnaireResponse response = new QuestionnaireResponse();
         FhirLookupResult questionnaireResponseResult = FhirLookupResult.fromResources(response);
@@ -253,19 +225,15 @@ public class QuestionnaireResponseServiceTest {
 
         Mockito.when(fhirClient.lookupQuestionnaireResponses(null, new ArrayList<>())).thenReturn(lookupResult);
 
-
         PageDetails pageDetails = new PageDetails(1, 0);
         List<QuestionnaireResponseModel> result = qrservice.getQuestionnaireResponses(null, new ArrayList<>(), pageDetails);
-
 
         assertEquals(0, result.size());
     }
 
     @Test
     public void getQuestionnaireResponses_ReturnZeroItem_WhenOnSecondPage() throws Exception {
-        //Arrange
         QuestionnaireResponseService qrservice = new QuestionnaireResponseService(fhirClient, fhirMapper, null, triageEvaluator, accessValidator);
-
 
         QuestionnaireResponse response = new QuestionnaireResponse();
         FhirLookupResult questionnaireResponseResult = FhirLookupResult.fromResources(response);
@@ -282,107 +250,66 @@ public class QuestionnaireResponseServiceTest {
 
     @Test
     public void getQuestionnaireResponses_accessViolation_throwsException() throws Exception {
-        // Arrange
         String carePlanId = CAREPLAN_ID_1;
 
-        QuestionnaireResponse response = buildQuestionnaireResponse(QUESTIONNAIRE_RESPONSE_ID_1, QUESTIONNAIRE_ID_1, PATIENT_ID);
-        Patient patient = buildPatient(PATIENT_ID);
+        QuestionnaireResponse response = buildQuestionnaireResponse();
+        Patient patient = buildPatient();
         FhirLookupResult lookupResult = FhirLookupResult.fromResources(response, patient);
         Mockito.when(fhirClient.lookupQuestionnaireResponses(carePlanId, new ArrayList<>())).thenReturn(lookupResult);
 
         Mockito.doThrow(AccessValidationException.class).when(accessValidator).validateAccess(patient);
 
-        // Act
-
-        // Assert
         assertThrows(AccessValidationException.class, () -> subject.getQuestionnaireResponses(carePlanId, new ArrayList<>(), new PageDetails(1, 10)));
     }
 
     @Test
     public void getQuestionnaireResponseById_responsePresent_returnsQuestionnaireResponse() throws Exception {
-        // Arrange
         String questionnaireResponseId = QUESTIONNAIRE_RESPONSE_ID_1;
-
-        QuestionnaireResponse questionnaireResponse = buildQuestionnaireResponse(QUESTIONNAIRE_RESPONSE_ID_1, QUESTIONNAIRE_ID_1, PATIENT_ID);
-        Patient patient = buildPatient(PATIENT_ID);
+        QuestionnaireResponse questionnaireResponse = buildQuestionnaireResponse();
+        Patient patient = buildPatient();
         FhirLookupResult lookupResult = FhirLookupResult.fromResources(questionnaireResponse, patient);
         Mockito.when(fhirClient.lookupQuestionnaireResponseById(questionnaireResponseId)).thenReturn(lookupResult);
         Mockito.when(fhirClient.lookupVersionsOfQuestionnaireById(List.of())).thenReturn(List.of());
 
         QuestionnaireResponseModel questionnaireResponseModel = buildQuestionnaireResponseModel();
         Mockito.when(fhirMapper.mapQuestionnaireResponse(questionnaireResponse, lookupResult, List.of())).thenReturn(questionnaireResponseModel);
-
-        // Act
+        
         Optional<QuestionnaireResponseModel> result = subject.getQuestionnaireResponseById(new QualifiedId(questionnaireResponseId));
 
-        // Assert
         assertEquals(questionnaireResponseModel, result.get());
     }
 
     @Test
     public void getQuestionnaireResponseById_responseForDifferentPatient_throwsException() throws Exception {
-        // Arrange
         String questionnaireResponseId = QUESTIONNAIRE_RESPONSE_ID_1;
 
-        QuestionnaireResponse response = buildQuestionnaireResponse(QUESTIONNAIRE_RESPONSE_ID_1, QUESTIONNAIRE_ID_1, PATIENT_ID);
-        Patient patient = buildPatient(PATIENT_ID);
+        QuestionnaireResponse response = buildQuestionnaireResponse();
+        Patient patient = buildPatient();
         FhirLookupResult lookupResult = FhirLookupResult.fromResources(response, patient);
         Mockito.when(fhirClient.lookupQuestionnaireResponseById(questionnaireResponseId)).thenReturn(lookupResult);
-
         Mockito.doThrow(AccessValidationException.class).when(accessValidator).validateAccess(patient);
 
-        // Act
-
-        // Assert
         assertThrows(AccessValidationException.class, () -> subject.getQuestionnaireResponseById(new QualifiedId(questionnaireResponseId)));
     }
 
     @Test
     public void getQuestionnaireResponseById_responseMissing_returnsEmpty() throws Exception {
-        // Arrange
         String questionnaireResponseId = QUESTIONNAIRE_RESPONSE_ID_1;
-
         Mockito.when(fhirClient.lookupQuestionnaireResponseById(questionnaireResponseId)).thenReturn(FhirLookupResult.fromResources());
-
-        // Act
         Optional<QuestionnaireResponseModel> result = subject.getQuestionnaireResponseById(new QualifiedId(questionnaireResponseId));
-
-        // Assert
         assertFalse(result.isPresent());
     }
 
     @Test
     public void submitQuestionnaireResponse_noActiveCarePlan_throwsException() {
-        // Arrange
         QuestionnaireResponseModel questionnaireResponseModel = buildQuestionnaireResponseModel();
         String cpr = "0101010101";
-
         Mockito.when(fhirClient.lookupActiveCarePlans(cpr)).thenReturn(FhirLookupResult.fromResources());
-
-        // Act
-
-        // Assert
         assertThrows(ServiceException.class, () -> subject.submitQuestionnaireResponse(questionnaireResponseModel, cpr));
     }
-/*  This test has become irrelevant since loopupActiveCareplan may now return multiple careplans
-    @Test
-    public void submitQuestionnaireResponse_multipleCarePlans_throwsException() {
-        // Arrange
-        QuestionnaireResponseModel questionnaireResponseModel = buildQuestionnaireResponseModel();
-        String cpr = "0101010101";
-
-        Mockito.when(fhirClient.lookupActiveCarePlan(cpr)).thenReturn(FhirLookupResult.fromResources(buildCarePlan(CAREPLAN_ID_1), buildCarePlan(CAREPLAN_ID_2)));
-
-        // Act
-
-        // Assert
-        assertThrows(IllegalStateException.class, () -> subject.submitQuestionnaireResponse(questionnaireResponseModel, cpr));
-    }
-*/
 
     @Test
     public void submitQuestionnaireResponse_wrongCarePlanId_throwsException() {
-        // Arrange
         var carePlanId = new QualifiedId(CAREPLAN_ID_1);
         QuestionnaireResponseModel questionnaireResponseModel = buildQuestionnaireResponseModel(carePlanId);
         String cpr = "0101010101";
@@ -391,49 +318,34 @@ public class QuestionnaireResponseServiceTest {
         FhirLookupResult lookupResult = FhirLookupResult.fromResources(carePlan);
         Mockito.when(fhirClient.lookupActiveCarePlans(cpr)).thenReturn(lookupResult);
 
-//        CarePlanModel carePlanModel = buildCarePlanModel(CAREPLAN_ID_2, PATIENT_ID);
-//        Mockito.when(fhirMapper.mapCarePlan(carePlan, lookupResult)).thenReturn(carePlanModel);
-
-        // Act
-
-        // Assert
         assertThrows(ServiceException.class, () -> subject.submitQuestionnaireResponse(questionnaireResponseModel, cpr));
     }
 
 
     @Test
     public void submitQuestionnaireResponse_success_returnsGeneratedId() throws Exception {
-        // Arrange
         QuestionnaireResponseModel questionnaireResponseModel = buildQuestionnaireResponseModel();
         String cpr = "0101010101";
 
         CarePlan carePlan = buildCarePlan(CAREPLAN_ID_1);
         FhirLookupResult lookupResult = FhirLookupResult.fromResources(carePlan);
         Mockito.when(fhirClient.lookupActiveCarePlans(cpr)).thenReturn(lookupResult);
-
-        CarePlanModel carePlanModel = buildCarePlanModel(CAREPLAN_ID_1, PATIENT_ID);
+        CarePlanModel carePlanModel = buildCarePlanModel();
         Mockito.when(fhirMapper.mapCarePlan(carePlan, lookupResult)).thenReturn(carePlanModel);
-
         QuestionnaireResponse questionnaireResponse = new QuestionnaireResponse();
         Mockito.when(fhirMapper.mapQuestionnaireResponseModel(questionnaireResponseModel)).thenReturn(questionnaireResponse);
-
         Mockito.when(fhirMapper.mapCarePlanModel(carePlanModel)).thenReturn(carePlan);
-
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
-
         Mockito.when(fhirClient.saveQuestionnaireResponse(questionnaireResponse, carePlan)).thenReturn(QUESTIONNAIRE_RESPONSE_ID_1);
 
-        // Act
         String result = subject.submitQuestionnaireResponse(questionnaireResponseModel, cpr);
 
-        // Assert
         assertEquals(QUESTIONNAIRE_RESPONSE_ID_1, result);
     }
 
 
     @Test
     public void submitQuestionnaireResponse_success_populatesAttributes() throws Exception {
-        // Arrange
         QuestionnaireResponseModel questionnaireResponseModel = buildQuestionnaireResponseModel();
         String cpr = "0101010101";
 
@@ -441,15 +353,13 @@ public class QuestionnaireResponseServiceTest {
         FhirLookupResult lookupResult = FhirLookupResult.fromResources(carePlan);
         Mockito.when(fhirClient.lookupActiveCarePlans(cpr)).thenReturn(lookupResult);
 
-        CarePlanModel carePlanModel = buildCarePlanModel(CAREPLAN_ID_1, PATIENT_ID);
+        CarePlanModel carePlanModel = buildCarePlanModel();
         Mockito.when(fhirMapper.mapCarePlan(carePlan, lookupResult)).thenReturn(carePlanModel);
 
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
 
-        // Act
-        String result = subject.submitQuestionnaireResponse(questionnaireResponseModel, cpr);
-
-        // Assert
+        subject.submitQuestionnaireResponse(questionnaireResponseModel, cpr);
+        
         assertEquals(new QualifiedId(PATIENT_ID), questionnaireResponseModel.getAuthorId());
         assertEquals(new QualifiedId(PATIENT_ID), questionnaireResponseModel.getSourceId());
         assertEquals(POINT_IN_TIME, questionnaireResponseModel.getAnswered());
@@ -460,7 +370,6 @@ public class QuestionnaireResponseServiceTest {
 
     @Test
     public void submitQuestionnaireResponse_success_computesTriagingCategory() throws Exception {
-        // Arrange
         QuestionnaireResponseModel questionnaireResponseModel = buildQuestionnaireResponseModel();
         String cpr = "0101010101";
 
@@ -468,26 +377,23 @@ public class QuestionnaireResponseServiceTest {
         FhirLookupResult lookupResult = FhirLookupResult.fromResources(carePlan);
         Mockito.when(fhirClient.lookupActiveCarePlans(cpr)).thenReturn(lookupResult);
 
-        CarePlanModel carePlanModel = buildCarePlanModel(CAREPLAN_ID_1, PATIENT_ID);
+        CarePlanModel carePlanModel = buildCarePlanModel();
         Mockito.when(fhirMapper.mapCarePlan(carePlan, lookupResult)).thenReturn(carePlanModel);
 
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
 
         Mockito.when(triageEvaluator.determineTriagingCategory(
-                questionnaireResponseModel.getQuestionAnswerPairs().stream().map(qa -> qa.getAnswer()).collect(Collectors.toList()),
-                carePlanModel.getQuestionnaires().get(0).getThresholds())
+                questionnaireResponseModel.getQuestionAnswerPairs().stream().map(QuestionAnswerPairModel::getAnswer).collect(Collectors.toList()),
+                carePlanModel.getQuestionnaires().getFirst().getThresholds())
         ).thenReturn(TriagingCategory.YELLOW);
 
-        // Act
-        String result = subject.submitQuestionnaireResponse(questionnaireResponseModel, cpr);
+        subject.submitQuestionnaireResponse(questionnaireResponseModel, cpr);
 
-        // Assert
         assertEquals(TriagingCategory.YELLOW, questionnaireResponseModel.getTriagingCategory());
     }
 
     @Test
     public void submitQuestionnaireResponse_submittedInTime_refreshesSatisfiedUntil() throws Exception {
-        // Arrange
         QuestionnaireResponseModel questionnaireResponseModel = buildQuestionnaireResponseModel();
         String cpr = "0101010101";
 
@@ -495,66 +401,54 @@ public class QuestionnaireResponseServiceTest {
         FhirLookupResult lookupResult = FhirLookupResult.fromResources(carePlan);
         Mockito.when(fhirClient.lookupActiveCarePlans(cpr)).thenReturn(lookupResult);
 
-        CarePlanModel carePlanModel = buildCarePlanModel(CAREPLAN_ID_1, PATIENT_ID, POINT_IN_TIME);
+        CarePlanModel carePlanModel = buildCarePlanModel(POINT_IN_TIME);
         Mockito.when(fhirMapper.mapCarePlan(carePlan, lookupResult)).thenReturn(carePlanModel);
 
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME.minus(Duration.ofHours(1)));
 
-        // Act
-        String result = subject.submitQuestionnaireResponse(questionnaireResponseModel, cpr);
+        subject.submitQuestionnaireResponse(questionnaireResponseModel, cpr);
 
-        // Assert
         // Verify that the satisfiedUntil-timestamp is advanced twice from the current point in time: to the next deadline (which was met), and to the next one after that.
-        var questionnaireWrapper = carePlanModel.getQuestionnaires().get(0);
+        var questionnaireWrapper = carePlanModel.getQuestionnaires().getFirst();
         assertEquals(Instant.parse("2021-12-03T10:00:00Z"), questionnaireWrapper.getSatisfiedUntil());
     }
 
 
     @Test
     public void submitQuestionnaireResponse_submissionOverdue_dont_refreshesSatisfiedUntil() throws Exception {
-        // Arrange
         QuestionnaireResponseModel questionnaireResponseModel = buildQuestionnaireResponseModel();
         String cpr = "0101010101";
 
         CarePlan carePlan = buildCarePlan(CAREPLAN_ID_1);
         FhirLookupResult lookupResult = FhirLookupResult.fromResources(carePlan);
         Mockito.when(fhirClient.lookupActiveCarePlans(cpr)).thenReturn(lookupResult);
-
-        CarePlanModel carePlanModel = buildCarePlanModel(CAREPLAN_ID_1, PATIENT_ID, POINT_IN_TIME);
+        CarePlanModel carePlanModel = buildCarePlanModel(POINT_IN_TIME);
         Mockito.when(fhirMapper.mapCarePlan(carePlan, lookupResult)).thenReturn(carePlanModel);
-
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME.minus(Duration.ofHours(1)));
 
-        // Act
-        String result = subject.submitQuestionnaireResponse(questionnaireResponseModel, cpr);
+        subject.submitQuestionnaireResponse(questionnaireResponseModel, cpr);
 
-        // Assert
         // Verify that the satisfiedUntil-timestamp is advanced twice from the current point in time: to the next deadline (which was met), and to the next one after that.
-        var questionnaireWrapper = carePlanModel.getQuestionnaires().get(0);
+        var questionnaireWrapper = carePlanModel.getQuestionnaires().getFirst();
         assertEquals(carePlanModel.getSatisfiedUntil(), questionnaireWrapper.getSatisfiedUntil());
     }
 
     @Test
     public void submitQuestionnaireResponse_refreshesSatisfiedUntilForCarePlan() throws Exception {
-        // Arrange
         QuestionnaireResponseModel questionnaireResponseModel = buildQuestionnaireResponseModel();
         String cpr = "0101010101";
 
         CarePlan carePlan = buildCarePlan(CAREPLAN_ID_1);
         FhirLookupResult lookupResult = FhirLookupResult.fromResources(carePlan);
         Mockito.when(fhirClient.lookupActiveCarePlans(cpr)).thenReturn(lookupResult);
-
-        CarePlanModel carePlanModel = buildCarePlanModel(CAREPLAN_ID_1, PATIENT_ID, List.of(
+        CarePlanModel carePlanModel = buildCarePlanModel(List.of(
                 buildQuestionnaireWrapperModel(QUESTIONNAIRE_ID_1, POINT_IN_TIME.minus(Period.ofDays(3))),
                 buildQuestionnaireWrapperModel(QUESTIONNAIRE_ID_2, POINT_IN_TIME.plus(Period.ofDays(1)))));
         Mockito.when(fhirMapper.mapCarePlan(carePlan, lookupResult)).thenReturn(carePlanModel);
-
         Mockito.when(dateProvider.now()).thenReturn(POINT_IN_TIME);
 
-        // Act
-        String result = subject.submitQuestionnaireResponse(questionnaireResponseModel, cpr);
+        subject.submitQuestionnaireResponse(questionnaireResponseModel, cpr);
 
-        // Assert
         // Verify that the satisfiedUntil-timestamp on the careplan is now the minimum among the questionnaires.
         // We submitted an answer to QUESTIONNAIRE_ID_1, so the value from QUESTIONNAIRE_ID_2 should be the new one.
         assertEquals(Instant.parse("2021-11-23T10:00:00Z"), carePlanModel.getSatisfiedUntil());
@@ -563,45 +457,35 @@ public class QuestionnaireResponseServiceTest {
 
     private CarePlan buildCarePlan(String carePlanId) {
         CarePlan carePlan = new CarePlan();
-
         carePlan.setId(carePlanId);
-
         return carePlan;
     }
 
-    private CarePlanModel buildCarePlanModel(String carePlanId, String patientId) {
+    private CarePlanModel buildCarePlanModel() {
         Instant satisfiedUntil = POINT_IN_TIME.plus(Period.ofDays(3)).plus(Duration.ofHours(4));
-        return buildCarePlanModel(carePlanId, patientId, satisfiedUntil);
+        return buildCarePlanModel(satisfiedUntil);
     }
 
-    private CarePlanModel buildCarePlanModel(String carePlanId, String patientId, Instant satisfiedUntil) {
+    private CarePlanModel buildCarePlanModel(Instant satisfiedUntil) {
         FrequencyModel frequencyModel = new FrequencyModel();
         frequencyModel.setWeekdays(List.of(Weekday.FRI));
         frequencyModel.setTimeOfDay(LocalTime.parse("11:00"));
-
         var questionnaireWrapper = buildQuestionnaireWrapperModel(QUESTIONNAIRE_ID_1, frequencyModel, satisfiedUntil);
-
-        return buildCarePlanModel(carePlanId, patientId, List.of(questionnaireWrapper));
+        return buildCarePlanModel(List.of(questionnaireWrapper));
     }
 
-    private CarePlanModel buildCarePlanModel(String carePlanId, String patientId, List<QuestionnaireWrapperModel> questionnaires) {
+    private CarePlanModel buildCarePlanModel(List<QuestionnaireWrapperModel> questionnaires) {
         CarePlanModel carePlanModel = new CarePlanModel();
-
-        carePlanModel.setId(new QualifiedId(carePlanId));
-
+        carePlanModel.setId(new QualifiedId(QuestionnaireResponseServiceTest.CAREPLAN_ID_1));
         carePlanModel.setPatient(new PatientModel());
-        carePlanModel.getPatient().setId(new QualifiedId(patientId));
-
+        carePlanModel.getPatient().setId(new QualifiedId(QuestionnaireResponseServiceTest.PATIENT_ID));
         carePlanModel.setQuestionnaires(questionnaires);
-
         return carePlanModel;
     }
 
-    private Patient buildPatient(String patientId) {
+    private Patient buildPatient() {
         Patient patient = new Patient();
-
-        patient.setId(patientId);
-
+        patient.setId(QuestionnaireResponseServiceTest.PATIENT_ID);
         return patient;
     }
 
@@ -609,35 +493,26 @@ public class QuestionnaireResponseServiceTest {
         FrequencyModel frequencyModel = new FrequencyModel();
         frequencyModel.setWeekdays(List.of(Weekday.TUE));
         frequencyModel.setTimeOfDay(LocalTime.parse("04:00"));
-
         return buildQuestionnaireWrapperModel(questionnaireId, frequencyModel, satisfiedUntil);
     }
 
     private QuestionnaireWrapperModel buildQuestionnaireWrapperModel(String questionnaireId, FrequencyModel frequencyModel, Instant satisfiedUntil) {
         var model = new QuestionnaireWrapperModel();
-
         model.setQuestionnaire(new QuestionnaireModel());
         model.getQuestionnaire().setId(new QualifiedId(questionnaireId));
-
         model.setFrequency(frequencyModel);
         model.setSatisfiedUntil(satisfiedUntil);
         model.setThresholds(List.of());
-
         return model;
     }
 
-    private QuestionnaireResponse buildQuestionnaireResponse(String questionnaireResponseId, String questionnaireId, String patientId) {
-        return buildQuestionnaireResponse(questionnaireResponseId, questionnaireId, patientId, ORGANIZATION_ID_1);
-    }
 
-    private QuestionnaireResponse buildQuestionnaireResponse(String questionnaireResponseId, String questionnaireId, String patientId, String organizationId) {
+    private QuestionnaireResponse buildQuestionnaireResponse() {
         QuestionnaireResponse response = new QuestionnaireResponse();
-
-        response.setId(questionnaireResponseId);
-        response.setQuestionnaire(questionnaireId);
-        response.setSubject(new Reference(patientId));
-        response.addExtension(Systems.ORGANIZATION, new Reference(organizationId));
-
+        response.setId(QuestionnaireResponseServiceTest.QUESTIONNAIRE_RESPONSE_ID_1);
+        response.setQuestionnaire(QuestionnaireResponseServiceTest.QUESTIONNAIRE_ID_1);
+        response.setSubject(new Reference(QuestionnaireResponseServiceTest.PATIENT_ID));
+        response.addExtension(Systems.ORGANIZATION, new Reference(ORGANIZATION_ID_1));
         return response;
     }
 
@@ -647,11 +522,9 @@ public class QuestionnaireResponseServiceTest {
 
     private QuestionnaireResponseModel buildQuestionnaireResponseModel(QualifiedId carePlanId) {
         QuestionnaireResponseModel questionnaireResponseModel = new QuestionnaireResponseModel();
-
         questionnaireResponseModel.setQuestionAnswerPairs(List.of(new QuestionAnswerPairModel()));
         questionnaireResponseModel.setQuestionnaireId(new QualifiedId(QUESTIONNAIRE_ID_1));
         questionnaireResponseModel.setCarePlanId(carePlanId);
-
         return questionnaireResponseModel;
     }
 }
